# dofus-builder

./: .prettierrc  README.md  default_IP_OVH.text  package.json  tsconfig.json
data/: amulet.json  belt.json  boots.json  cloak.json  hat.json  pet.json  ring.json  shield.json  weapon.json
frontend/: .gitignore  .prettierignore  .prettierrc  index.html  jsconfig.json  package.json  stufftodo.txt  vite.config.js
frontend/public/: privacy.html
frontend/public/favicon/: site.webmanifest
frontend/src/: App.svelte  app.css  global.d.ts  main.ts
frontend/src/clients/: dofusBookUrl.ts  dofusDB.ts
frontend/src/components/: BestItems.svelte  Builds.svelte  Combination.svelte  ExportBuild.svelte  HoverItemOrPano.svelte  Icon.svelte  ItemSearch.svelte  LanguageSelect.svelte  Navigation.svelte  PreStats.svelte  SaveButton.svelte  SavedSearches.svelte  ShowStats.svelte  StatWeights.svelte
frontend/src/lib/: Icon.svelte  iconMap.ts
frontend/src/logic/: build.ts  display.ts  frontendDB.ts  item.ts  language.ts  urlTranslate.ts  value.ts
frontend/src/stores/: builder.ts  storeBuilder.ts
frontend/src/types/: build.ts  (+6 more)
frontend/src/wasm/combination/: Cargo.toml
frontend/src/wasm/combination/src/: cpu.rs  gpu.rs  lib.rs  prepare.rs  stats.rs
shared/: dofusDBMap.ts
shared/types/: item.ts  stats.ts
src/: error.ts  server.ts
src/api/: handlers.ts  routes.ts
src/builder/: builder.ts  value.ts
src/clients/: convertItemRequirement.ts  dofusDB.ts  excludedItems.ts  idsToPanos.ts
src/db/: base62inc.ts  item.ts  itemDB.ts
src/types/: Item.ts  character.ts
(+61 files in other folders)
