[package]
name = "combination"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
smallvec = "1.15.1"
